# fox32

./: .gitignore  Cargo.toml  LICENSE  Makefile  Makefile.am  README.md  build.rs  configure.ac  encoding.md  flake.nix  fox32rom.h  fox32rom.h-e
.github/workflows/: fox32-run-cputest.yml  fox32-unstable-linux.yml  fox32-unstable-windows.yml
docs/: audio.md  cpu.md  encoding.md  instructions.md  io_bus.md  memory.md  releasing.md
src/: Makefile.am  audio.rs  bus.c  bus.h  bus.rs  cpu.c  cpu.h  cpu.rs  disk.c  disk.h  disk.rs  framebuffer.c  framebuffer.h  keyboard.c  keyboard.h  keyboard.rs  log.h  main.c  main.rs  memory.rs  mmu.c  mmu.h  mouse.c  mouse.h  mouse.rs  runtime.rs  screen.c  screen.h  serial.c  serial.h  setjmp.rs  sound.c  sound.h  wrapped.rs
