[package]
name = "fox32"
version = "0.5.0"
authors = ["ry"]
edition = "2021"
build = "build.rs"

[dependencies]
chrono = "0.4"
image = "0.24"
log = "0.4"
pixels = "0.9.0"
rfd = "0.7.0"
ringbuf = "0.2"
rodio = "0.15.0"
winit = "0.26"
winit_input_helper = "0.11"

[build-dependencies]
anyhow = "1.0"
vergen = { version = "7", default-features = false, features = ["build", "git"] }
